// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlavorStash /> can render 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="text-center row"
    >
      <div
        class="col"
      >
        <h1>
          Flavor Stash
        </h1>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="mb-1 card"
        >
          <div
            class="border-bottom cursor--pointer card-body"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h3
                  id="flavor-undefined"
                >
                  <i
                    class="fa chevron-left"
                  />
                   Sweet Cream (CAP)
                </h3>
              </div>
              <div
                class="text-center col"
              >
                <h4>
                  <strong>
                    Use:
                  </strong>
                   NaN - NaN%
                </h4>
              </div>
              <div
                class="text-right col"
              >
                <h5>
                  Added: 2020-01-01
                </h5>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mb-1 card"
        >
          <div
            class="border-bottom cursor--pointer card-body"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h3
                  id="flavor-undefined"
                >
                  <i
                    class="fa chevron-left"
                  />
                   Tatanka (FLV)
                </h3>
              </div>
              <div
                class="text-center col"
              >
                <h4>
                  <strong>
                    Use:
                  </strong>
                   NaN - NaN%
                </h4>
              </div>
              <div
                class="text-right col"
              >
                <h5>
                  Added: 2020-01-01
                </h5>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FlavorStash /> can render with an empty stash 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="text-center row"
    >
      <div
        class="col"
      >
        <h1>
          Flavor Stash
        </h1>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="text-center col"
        >
          Navigate to 
          <a
            href="/flavors"
            title="Flavors"
          >
            Flavors
          </a>
           to add to your Flavor Stash.
          <p>
            No flavors in stash.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
